[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/art/hazards/spike.png" type="Texture" id=1]
[ext_resource path="res://Levels/LevelTileset.tres" type="TileSet" id=2]
[ext_resource path="res://Levels/LightsTileset.tres" type="TileSet" id=3]
[ext_resource path="res://World/ApproachableObject.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/shaders/light_shader_sprite.png" type="Texture" id=5]
[ext_resource path="res://World/BubbleTrigger.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Bubble.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level.gd" type="Script" id=22]

[sub_resource type="ConvexPolygonShape2D" id=83]
points = PoolVector2Array( 0, 0, 0, 0, 8, 0, 8, 4, 0, 4, 0, 0, 0, 0 )

[sub_resource type="TileSet" id=82]
0/name = "spike.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 4, 8, 4 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 83 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 83 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=60]
extents = Vector2( 159.875, 63 )

[sub_resource type="RectangleShape2D" id=71]
extents = Vector2( 0, 92 )

[node name="SandboxLevel" type="Node2D"]
script = ExtResource( 22 )
__meta__ = {
"_edit_horizontal_guides_": [ 217.0 ]
}

[node name="CamAnchor" type="Position2D" parent="."]
position = Vector2( 160, 90 )

[node name="Level" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
collision_mask = 42
format = 1
tile_data = PoolIntArray( -65536, 17, 0, -65534, 536870929, 0, -65532, 17, 0, -65530, 17, 0, -65528, 17, 0, -65526, 536870929, 0, -65524, 17, 0, -65523, 17, 0, -65516, 17, 0, -65515, 17, 0, -65513, 17, 0, -65511, 17, 0, -65509, 17, 0, -65507, 17, 0, -65505, 17, 0, -65503, 17, 0, -65501, 17, 0, -65499, 17, 0, -65498, 17, 0, 65536, -536870890, 0, 65540, 536870926, 0, 65542, 536870926, 0, 65544, 536870926, 0, 65548, 536870926, 0, 65549, 536870926, 0, 65557, 1610612742, 0, 65572, 536870926, 0, 65576, 17, 0, 196648, 17, 0, 327720, 17, 0, 458792, 17, 0, 655358, 17, 0, 589855, 1610612753, 0, 589857, 1610612753, 0, 589864, 17, 0, 655393, 1610612753, 0, 786430, 17, 0, 720936, 17, 0, 786465, 1610612753, 0, 917502, 17, 0, 852006, 1610612750, 0, 852008, 17, 0, 1048574, 17, 0, 983076, 23, 0, 983078, 536870929, 0, 983080, 17, 0, 1048588, 1, 0, 1048590, 4, 0, 1179646, 17, 0, 1114139, 11, 0, 1114146, 23, 0, 1114148, 536870929, 0, 1114150, 536870929, 0, 1114152, 17, 0, 1179665, 536870916, 0, 1179667, 536870913, 0, 1310718, 17, 0, 1245184, 536870934, 0, 1245216, 23, 0, 1245218, 536870930, 0, 1245224, 17, 0, 1441790, 17, 0, 1376256, 19, 0, 1376260, 19, 0, 1376264, 19, 0, 1376268, 536870931, 0, 1376272, 536870931, 0, 1376276, 536870931, 0, 1376280, 536870931, 0, 1376284, 19, 0, 1376286, 19, 0, 1376290, 536870929, 0, 1376292, 536870929, 0, 1376294, 536870929, 0, 1376296, 17, 0 )

[node name="Lights" type="TileMap" parent="."]
z_index = 10
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131070, 17, 0, 65538, 10, 0, 65546, 9, 0, 65573, 15, 0, 65574, 536870927, 0, 262142, 17, 0, 393214, 17, 0, 524286, 17, 0, 851970, 0, 0, 1245204, 8, 0, 1245206, 12, 0 )
__meta__ = {
"_editor_description_": "A tilemap that is exclusively for adding tilemaps that are lights. They will all come with a light shader."
}

[node name="Light2D" type="Light2D" parent="Lights"]
position = Vector2( 22, 48 )
texture = ExtResource( 5 )
energy = 0.6
range_layer_min = -1

[node name="Light2D4" type="Light2D" parent="Lights"]
position = Vector2( 308, 18 )
texture = ExtResource( 5 )
texture_scale = 0.8
energy = 0.5
range_layer_min = -1

[node name="Light2D2" type="Light2D" parent="Lights"]
position = Vector2( 85, 31 )
texture = ExtResource( 5 )
energy = 0.5
range_layer_min = -1

[node name="Hazards" type="TileMap" parent="."]
tile_set = SubResource( 82 )
cell_size = Vector2( 4, 4 )
cell_tile_origin = 1
show_collision = true
cell_clip_uv = true
collision_layer = 256
collision_mask = 0
format = 1

[node name="ApproachableObject" parent="." instance=ExtResource( 4 )]

[node name="OutOfBounds" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds"]
position = Vector2( 159.875, 256 )
shape = SubResource( 60 )

[node name="Bubbles" type="Node2D" parent="."]
position = Vector2( -24, -106 )

[node name="Bubble" parent="Bubbles" instance=ExtResource( 7 )]
position = Vector2( 248, 226 )

[node name="Boundaries" type="Node2D" parent="."]

[node name="LevelBoundary" type="Area2D" parent="Boundaries"]
position = Vector2( -3, 0 )
collision_layer = 512
collision_mask = 1024

[node name="Second" type="CollisionShape2D" parent="Boundaries/LevelBoundary"]
position = Vector2( 328, 92 )
shape = SubResource( 71 )

[node name="RespawnPoints" type="Node2D" parent="."]

[node name="RespawnPoint" type="Position2D" parent="RespawnPoints" groups=["respawn_points"]]
position = Vector2( 119, 124 )

[node name="BubbleTrigger" parent="." instance=ExtResource( 6 )]
position = Vector2( 229, 24 )
